# ChangeLog for media-gfx/cldx-themes
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*cldx-themes-10.0.1 (11 Dec 2009)

  11 Dec 2009; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +cldx-themes-10.0.1.ebuild:
  Version bump. Add update boot splash.

  02 Dec 2009; Mike Hirecky (mhiretskiy) <mh@calculate.ru>
  cldx-themes-10.0.ebuild:
  Fix dependence.

  23 Nov 2009; Mike Hirecky (mhiretskiy) <mh@calculate.ru>
  +cldx-themes-10.0.ebuild:
  Themes for Calculate Linux Desktop XFCE 10.0 moved from calculate-cldx-themes