@@ -1,7 +1,9 @@
 DIST cldx-themes-10.0.tar.bz2 18658254 RMD160 bd85bde89e20c14ad9288b9989b00f54633921da SHA1 0903f0d27772ecd8e3386a15e8e9666341ff7ef0 SHA256 5a6b1f8ef6ad55ab7fe5971b3cb20464feaad28d8d55b5590583758bd909bfe9
 DIST cldx-themes-10.2.tar.bz2 17840632 RMD160 d17acedb0068230e6864abe70339e3d42c9f76fa SHA1 98b648f10c7524f4180c3b5ff1790b37c3c3e3c8 SHA256 d9861602006d6e313e56edd236d109f2f42bee537aa271be362f6428e31913ca
+DIST cldx-themes-10.4.tar.bz2 17825911 RMD160 1b5c71fa4d3729f985f959340991ba63ea71e1e3 SHA1 603b30fc3891ce3b8028643ac4860d58ff604143 SHA256 3a8ef475b80ede699d8c7f14372365d570979bd7ff39d3118cc0f487a1a962d0
 EBUILD cldx-themes-10.0.1.ebuild 1323 RMD160 2afff01840811b0e8485c2d90f79437e36f862b2 SHA1 222b27940d7bb9dd7775703ce7a3605349a5c891 SHA256 f50a443a4e88ab70abc6f5f96fa1beb036301d44fe482ce18d633d466bff81dd
 EBUILD cldx-themes-10.0.ebuild 1178 RMD160 4ff181459be9fbfdbebc7b957af0a697750c437e SHA1 c5620ce967e379ecb14eb014e088260456c28a70 SHA256 47fb785113b2eb10c3e409eec2ee16a71f4531ee30370f68e94534df3d289417
 EBUILD cldx-themes-10.2-r3.ebuild 1391 RMD160 8c265c834bd62c32a29ebe4de9d834a274abd3f1 SHA1 bc99da47f517ff6896e8ed1fd49df0a9dbf3aa17 SHA256 91bd459cd482e6a524f73ab28bfb2c07bf3a51d1eddde4b109404c99f65c836b
-MISC ChangeLog 560 RMD160 8050fb1dabc54640fa18ed8daa0da371cc686191 SHA1 0c6eb12d48c9612220d6dd186efd7d2bc1351a9d SHA256 2879119f623ed88b609d81166249b365b8ea923fab97d4874883ed8136f0ecd7
+EBUILD cldx-themes-10.4.ebuild 1416 RMD160 2b70c3afb33916917f5e3225d8dbad716e00ff86 SHA1 96ec69b2fd4eac77ec8ce862b8c77f7fc286097c SHA256 17c03d5650657df84cd9642c812f6377b90699a662d0d8cf92ab819907b4a0ac
+MISC ChangeLog 721 RMD160 2cb9b584d110480037a4538661d1576a9f40948b SHA1 851d5089bd1aa6bf9da50462684c87d0c32cbc5c SHA256 b121ec2e375bde57f0f07d2ade6717ab11c13638179da31e823198c1245ddf83
 MISC metadata.xml 261 RMD160 780ef31c45327481235a981f2595b7a20c84bea7 SHA1 8dab799571d6f6a3ae1fc5df00b2a1467baecbba SHA256 e53f2cc5c63713f127f04a8bb2430c6f2b17da1825772a993f170268352a5858
