@@ -1,6 +1,12 @@
 # ChangeLog for media-gfx/cldx-themes
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*cldx-themes-10.4 (29 Mar 2010)
+
+  29 Mar 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  +cldx-themes-10.4.ebuild:
+  Version bump. Removed emerald theme.
 
 *cldx-themes-10.0.1 (11 Dec 2009)
 
